# evidence-first-harness

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.hermes/codex-prompts/: executors-batch-a.md  executors-batch-b.md  executors-batch-c.md
.hermes/droid-prompts/: phase-1-sandbox.md
.hermes/plans/: 2026-07-12_landing-page.md  2026-07-12_phase-3-impact-analysis.md  2026-07-12_phase-4-independent-evidence.md
benchmarks/configs/: template.yaml
benchmarks/reports/: benchmark_20260712_124801.json  benchmark_20260712_124801.md
config/: models.yaml  policies.yaml  tools.yaml
docs/: CNAME  index.html
docs/_app/: version.json
docs/_app/immutable/assets/: 0.YhRWZHWJ.css  0.i_lYomdx.css
docs/_app/immutable/chunks/: 5SS7jRy7.js  7LlZRnDq.js  B77hN0jn.js  BbGYhV1_.js  BwcaSrDg.js  CBe1fYse.js  CM0rZwon.js  CXnwDOnu.js  CqwqeD9a.js  D0KRLuf-.js  D2e8t84X.js  DHYs2O48.js  DuH7dnJD.js  Dy7bwsEl.js  Mm-tzB-p.js  pBLWYskI.js
docs/_app/immutable/entry/: app.5oS5RK2M.js  app.BJgaiLXr.js  app.BkJVwmdc.js  app.NPcl2Aaa.js  start.D4wjM40F.js  (+3 more)
site/: package-lock.json  package.json  svelte.config.js  tsconfig.json
site/src/: app.css  app.html
site/src/routes/: +layout.svelte  +page.svelte
src/evidence_first_harness/: __init__.py  cli.py
src/evidence_first_harness/agents/: __init__.py  adversarial_review.py  explanation.py  implementation.py  independent_tests.py  invoker.py  planner.py  specification.py  tools.py
src/evidence_first_harness/artifacts/: __init__.py  store.py
src/evidence_first_harness/benchmarks/: __init__.py
src/evidence_first_harness/callbacks/: __init__.py  model.py  provenance.py
src/evidence_first_harness/domain/: __init__.py  approval.py  decision.py  evidence.py  exceptions.py  impact.py  provenance.py  risk.py  specification.py
src/evidence_first_harness/evidence/: __init__.py  bundle.py  planner.py
src/evidence_first_harness/impact/: __init__.py  analyzer.py  coverage_map.py  graph.py  python_ast.py  test_selector.py
src/evidence_first_harness/integrations/: __init__.py  github.py
src/evidence_first_harness/observability/: __init__.py  logging.py
src/evidence_first_harness/policy/: __init__.py  decision.py  engine.py
src/evidence_first_harness/repository/: __init__.py  git.py
src/evidence_first_harness/sandbox/: __init__.py  commands.py  docker.py  permissions.py
src/evidence_first_harness/workflows/: __init__.py  graph.py  nodes.py  runner.py  session.py  state.py
tests/: conftest.py
tests/unit/: test_decision_engine.py  test_domain_models.py  test_github_integration.py  test_impact_analyzer.py  test_independent_evidence.py  test_patch_generation.py  test_policy_engine.py  test_task_handoff.py
(+33 files in other folders)
