[project]
name = "evidence-first-harness"
version = "0.1.0"
description = "Deterministic assurance system for AI-generated code — produces validated Evidence Bundles, not just patches"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "R Max Espinoza", email = "hey@rmax.dev" }
]
keywords = ["ai-safety", "software-engineering", "evidence", "verification", "deterministic-policy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "docker>=7.0",
    "structlog>=24.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pyright>=1.1",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers>=4.6",
    "semgrep>=1.75",
    "pip-audit>=2.7",
    "mutmut>=3.0",
    "hypothesis>=6.100",
]

adk = [
    "google-adk>=2.0",
    "litellm>=1.40",
]

all = [
    "evidence-first-harness[dev,adk]",
]

[project.scripts]
efh = "evidence_first_harness.cli:main"

[project.urls]
Homepage = "https://github.com/rmax-ai/evidence-first-harness"
Repository = "https://github.com/rmax-ai/evidence-first-harness"
Issues = "https://github.com/rmax-ai/evidence-first-harness/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidence_first_harness"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "B", "UP", "C4", "SIM",
    "TCH", "ARG", "RUF", "PERF", "D",
]
ignore = [
    "D100", "D104", "D107",  # missing docstring in public module/package/init
    "TC003",  # datetime needed at runtime for Pydantic validation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "sandbox: marks tests that require Docker",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
